--- a/frontend/site_templates/checkout_archive.pug
+++ b/frontend/site_templates/checkout_archive.pug
@@ -18,3 +18,6 @@ block data
   |self.data.dateTimeLimit = '{{ checkout.last_exchange_date|default(0) }}';
   |self.data.category_slug = '{{ gift.category.slug|default('') }}';
   |self.data.category_id = '{{ gift.category.id|default('') }}';
+  |self.data.events_place = '{{ gift.place|default('') }}';
+  |self.data.events_income = '{{ gift.taken_place_on|default('') }}';
+  |self.data.events_start = '{{ gift.start_on|default('') }}';
